fix scrollbars

--- a/client/src/app/header/sidebar/sidebar.component.scss
+++ b/client/src/app/header/sidebar/sidebar.component.scss
@@ -4,7 +4,7 @@ mat-drawer-container {
 
 	.container {
 		box-sizing: border-box;
-		overflow-y: scroll;
+		overflow-y: auto;
 		min-height: 100%;
 	}
 }
